--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Star people search</string>
+    <string name="hint">enter name or starship</string>
+    <string name="name">name</string>
+    <string name="information">information</string>
 </resources>
