--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="hint">enter name or starship</string>
     <string name="name">name</string>
     <string name="information">information</string>
+    <string name="welcome_text_view">Welcome to Star People Search enter your favoureite name people or staship</string>
+    <string name="favourite">favourite</string>
 </resources>
